# filemetric-engine

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  python-ci.yml
filecompare/: cache.py  index.py  types.py
filemetric_engine/: __init__.py  cache.py  compare.py  index.py  registry.py  types.py
tests/: test_dynamic.py  test_filecompare.py
