[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filemetric-engine"
version = "1.0.0"
description = "Compare text files by similarity percentage"
authors = [
  { name = "0x0pharaoh", email = "moins.dev@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
  "scikit-learn>=1.3",
  "numpy>=1.24",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["filemetric_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
filemetric = "filemetric_engine.cli:main"