[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filemetric-engine"
version = "1.0.0"
description = "Compare text files by similarity percentage"
authors = [
  { name = "0x0pharaoh", email = "moins.dev@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
  "scikit-learn>=1.7.0",
  "numpy>=2.2.0",
  "scipy>=1.15.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["filemetric_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
filemetric = "filemetric_engine.cli:main"